# Chatbot-MiNI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  chatbot_mini.yml  docker-compose.yml  environment-linux.yml  pyproject.toml  requirements.txt  scraping-data-HTML-TXT.py  sus.py
new_pipeline/: README.md  common.py  describe_files.py  extract_facts.py  ingest_facts.py
src/chroma_db/: create_db.py
src/data_ingest/: main.py
src/data_ingest/modules/: chunker.py  cleaner.py  embedder.py  extractor.py  vector_db.py
src/frontend/: app.py
src/pipeline/: README.md  common.py  describe_files.py  extract_facts.py  ingest_facts.py  scraper.py
src/preprocessing/: html_cleaning.py
src/rag_api/: api.py  main.py  main2.py
src/rag_api/modules/: analytics.py  api.py  logs.py  prompt_builder.py  retrieval.py
src/scraper/: main.py  output0.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt  test.ipynb
src/scraper/modules/: fetcher.py  parser.py  scheduler.py  uploader.py
src/scraping/: scraping-data-HTML-TXT.py
src/survey_questions/: convert.py  questions.csv  questions_cat.csv
src/utils/: paths.py
